# Kai

./: .env.example  .gitignore  COMPANIONS_INTEGRATION_PLAN.md  EVOLUTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  KernelPanel.tsx  MERGE_INFO.md  MarkdownRenderer.tsx  README.md  ResumePreview.tsx  SummaryStep.tsx  awesome.json  eslint.config.js  index.html  index.tsx  kai_system_rewrite (1).py  main.tf  metadata.json  openapi.json  openapi.yaml  outputs.tf  package-lock.json  package.json  providers.tf  requirements.txt  sample.glb  tailwind.config.js  tsconfig.api.json  tsconfig.json  types.ts  vite.config.ts  vitest.config.api.ts  vitest.config.ts
candidates/kai-storage-commander/: manifest.json  pyproject.toml
candidates/kai-storage-commander/tests/: test_audit_transport.py  test_commander.py  test_manifest.py  test_policy.py
core/: adapter.py  (+23 more)
kai-core/: .env.example  README.md  docker-compose.yml  pyproject.toml
kai-core/docs/: ARCHITECTURE.md  CHI_Q_MODEL.md  CODEX_OPERATING_PROTOCOL.md  DEPLOYMENT_PLAN.md  DRIVE_WORKFLOW.md  GITHUB_RESEARCH.md  MEMORY_MODEL.md  SECURITY.md
kai-core/kai_core/: __init__.py  config.py  logging.py
kai-core/kai_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
kai-core/kai_core/cli/: main.py
kai-core/kai_core/connectors/: google_drive.py
kai-core/kai_core/extraction/: document_extractor.py  duplicate_detector.py
kai-core/kai_core/memory/: operational_memory.py
kai-core/tests/: test_chi_q.py  test_duplicate_detection.py  test_extraction.py  test_hashing.py  test_workflows.py
(+366 files in other folders)
