[project]
name = "kai-core"
version = "0.1.0"
description = "KAI CORE persistent agent operating platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kai = "kai_core.cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kai_core"]

[tool.setuptools.package-dir]
kai_core = "kai_core"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
