[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kai-storage-commander"
version = "0.1.0"
description = "Safe orchestration layer for Kai Termux storage operations"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kai-storage-commander = "kai_storage_commander.cli:main"
